syntax = "proto3";

package api;

option go_package = "apipb";

service AntiBruteforceService {
    rpc Check (CheckRequest) returns (CheckResponse) {}
    rpc Reset (ResetRequest) returns (ResetResponse) {}
}

message CheckRequest {
    string login = 1;
    string password = 2;
    string ip = 3;
}

message CheckResponse {
    bool ok = 1;
}

message ResetRequest {
    string login = 1;
    string ip = 2;
}

message ResetResponse {
    bool ok = 1;
}
